logs/rosterusertools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RosterUserTools-0.17.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/roster_user_tools'...
Compiling './lib/python3.5/site-packages/roster_user_tools/cli_common_lib.py'...
***   File "./lib/python3.5/site-packages/roster_user_tools/cli_common_lib.py", line 153
    print "CLIENT ERROR: %s" % message
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/roster_user_tools/cli_record_lib.py'...
***   File "./lib/python3.5/site-packages/roster_user_tools/cli_record_lib.py", line 146
    print 'ADDED %s: %s zone_name: %s view_name: %s ttl: %s' % (
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/roster_user_tools/roster_client_lib.py'...
***   File "./lib/python3.5/site-packages/roster_user_tools/roster_client_lib.py", line 90
    print "ERROR: Credential file not found, invalid credentials."
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
